# Texere

./: .coveragerc  .env.example  .gitignore  .indexer-config.example.json  .indexer-config.example.md  .nxignore  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CLASSIFIER_TESTING_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  ENV_SETUP.md  ESLINT_OXLINT_EXECUTION.md  ESLINT_OXLINT_MIGRATION_PLAN.md  EXECUTION_PLAN.md  LICENSE  LINT_RECOMMENDATIONS.md  LINT_SPEC_DIVERGENCES.md  Makefile  OXLINT_ESLint_HYBRID_STRATEGY.md  OXLINT_QUICK_REFERENCE.md  OXLINT_REPLACEMENT_ANALYSIS.md  PUBLIC_RELEASE_PLAN.md  README.md  SECURITY.md  SETUP_CHECKLIST.md  SPEC_UPDATE_SUMMARY.md  TYPECHECK_CACHE_SOLUTIONS.md  docker-compose.langfuse.yml  docker-compose.ollama.yml  docker-compose.yml  eslint.config.mjs  langgraph.json  nx.json  package.json  (+8 more)
.amp/: agents.md  settings.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: lint.yml  publish.yml
.husky/: pre-commit
.opencode/: opencode.jsonc
.opencode/agents/: code.md  execution_code_verifier.md  execution_coder.md  execution_coordinator.md  execution_implementation.md  execution_orchestrator.md  execution_planning.md  execution_research.md  issues.md  pac.md  qc.md  research.md  visual-analysis.md
.serena/: project.yml
.sisyphus/: boulder.json
.sisyphus/benchmarks/: ingest-benchmark.md  run-2026-02-14.md  run-2026-02-15.md
.sisyphus/drafts/: batch-store-and-link.md  coding-orchestrator.md  kg-redesign.md  memory-graph-audit.md  oh-my-opencode-integration.md  sqlite-benchmark-research.md  texere-benchmark-task.md  texere-omo-integration.md  v1.1-planning.md
.sisyphus/plans/: deps-update.md  loom-research-docs.md  option1-temp-ids-inline-edges.md  public-mcp-polish-plan.md  test-suite-overhaul.md  texere-v2.1.md  texere.md  v1.1-schema-refinement.md
.texere/: texere.db  texere.db-shm  texere.db-wal
apps/graph-cli-app/: README.md  package.json  project.json  tsconfig.base.json  tsconfig.spec.json  vitest.config.ts
apps/indexer-cli/: README.md  package.json  project.json  tsconfig.lib.json  tsconfig.spec.json  vitest.config.ts
apps/langgraph-dev/: .env.example  eslint.config.mjs  package.json  project.json
apps/mastra/: .env.example  .eslintignore  .gitignore  README.md  eslint.config.mjs  package.json  project.json  test-agent.mjs  tsconfig.json  vitest.config.ts
apps/mcp/: AGENTS.md  README.md  eslint.config.mjs  package.json  tsconfig.base.json  tsdown.config.ts  vitest.unit.config.ts
docs/: README.md  batch-api-design-options.md  kg-redesign.md  memory-graph-audit.md  memorygraph.md  node-modeling-test-findings.md  node-modeling-test-plan.md  oh-my-opencode-integration.md  pagination-implementation-plan.md  search-comparison-llm-ux.md  sqlite-benchmark-research.md  three-branch-workflow.md  v1.1-node-schema-draft.md  v4-ideas.md  v4-type-system.md
docs/engineering/: ANALYSIS-cli-tool-gaps.md  DOC-VALIDATION-SETUP.md  DOCUMENT-REGISTRY.md  DOCUMENT-SYSTEM.md  LINKING-STRATEGY.md  README.md  agent_questions_knowledge_requirements.md  ai_coding_system_problem_catalogue_orchestration_challenges (9).md  documentation_guide.md  ideation_problems_graph_knowledge_system.md  knowledge-graph-agent-questions.md  user_flows.md  (+5 more)
implementation/: IMPLEMENTATION_PLAN.md
script/: aggregate-coverage.mjs  fetch-ky-fixture.sh  generate-indices.mjs  generate-scip-fixture.sh  validate-docs.mjs
scripts/: aggregate-coverage.mjs  capture-screenshots.mjs  compare-screenshots.mjs  dev-log.sh  filter-logs.mjs  format-staged.mjs  lint-staged-ts.mjs  register_langfuse_llm_connection.sh  release-version.mjs  typecheck-watch-log.sh
skills/: texere.md
specs/: SPEC.md  hitl_policy_spec.md  texel_lang_graph_runtime_spec_v_0.md  texere_high_level_system_spec_v_0.md  texere_repo_connector_repo_adapter_spec_indexing_free_multi_host.md  ui_terminal_spec.md
tests/: __init__.py  test_checkpoint_persistence.py  test_graph_compilation.py  test_workflow_state.py
(+467 files in other folders)
