[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "texere"
version = "0.0.1"
description = "Texere core + CLI skeleton"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Texere Authors" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic==2.9.2",
    "typer[all]==0.12.5",
    "textual==0.50.0",
    "rich==13.9.2",
    "rich-click==1.8.3",
    "langgraph==0.2.38",
]

[project.scripts]
texere = "texere_cli.main:app"

[project.entry-points."texere.repo_drivers"]
local = "texere_repo_drivers.local:LocalRepoAdapter"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/texere_core", "src/texere_cli", "src/texere_repo_drivers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.envs.default]
dependencies = [
    "ruff==0.6.9",
    "black==24.10.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.6.1",
    "pytest-mock==3.14.0",
    "mypy==1.11.2",
]

[tool.hatch.envs.default.scripts]
ui = "texere ui"
lint = "ruff check ."
fmt = "ruff format . && black ."
test = "pytest -q"
test-cov = "pytest -q --cov=src --cov-report=term-missing"
test-unit = "pytest -q -m 'not integration'"
test-integration = "pytest -q -m integration"
test-all-cov = "pytest -q --cov=src --cov-report=term-missing --cov-report=xml"
lock = "uv pip compile pyproject.toml -o requirements.lock"
agent-post-edit = "hatch run python -m ruff check . && hatch run python -m ruff format --check . && hatch run python -m black --check . && hatch run python -m mypy . && hatch run python -m pytest -q -m 'not integration' --cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=80 && hatch run python -m pytest -q -m integration && hatch build"
 

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --maxfail=1"
markers = [
    "integration: end-to-end flows (CLI run, executor stream)",
]
